--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.89.0",
     "expo": "~54.0.30",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.12",
     "expo-device": "~8.0.10",
     "expo-font": "~14.0.10",
